<resources>
    <string name="app_name">Skånetrafiken</string>
    <string name="action_settings">Skånetrafiken</string>
    <string name="Reseplanerare">Reseplanerare</string>
    <string name="Tidtabeller">Tidtabeller</string>
    <string name="Hållplatssök">Hållplatssök</string>
    <string name="Biljetter">Biljetter</string>

    <string name="Från">Från:</string>
    <string name="Till">Till:</string>
    <string name="Tid">               Tid/Datum</string>
    <string name="change">Ändra</string>
    <string name="just">Just nu</string>
    <string name="Ankomst">Ankomst</string>
    <string name="Avgång">Avgång</string>
    <string name="Trafikslag">Trafikslag</string>
    <string name="change2">Ändra</string>
    <string name="Favoriter">Favoriter</string>
    <string name="Bevakningar">Bevakningar</string>
    <string name="Sök">Sök</string>


    <string-array name="qui">
        <item>Hell</item>
        <item>Myrhålan</item>
        <item>Accident</item>
        <item>Yoghurt City</item>
        <item>Lauras Secret City</item>
        <item>Pappledapple village</item>
        <item>The Crotch Hill</item>
        <item>Pärup</item>
        <item>Mikrotown</item>
    </string-array>

    <string-array name="ui">
        <item>Pärup - Mikrown, tor.</item>
        <item>Myrhålan - Yoghurt City, mån, fre.</item>
        <item>Accident - Hell, tis.</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

