<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.laura.assignment_2.Reseplanerare"
    android:background="@android:color/darker_gray">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/aarr"
        android:scaleType="fitStart"/>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:stretchColumns="2
     ">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Från"
                    android:id="@+id/textView5"
                    android:layout_gravity="left"
                    android:textColor="#ff030102" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:layout_gravity="left"
                    android:paddingLeft="240dp" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Till"
                    android:id="@+id/textView6"
                    android:textColor="#ff000000" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:paddingLeft="250dp" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:background="#ffb55bc0">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:background="#e7d255ff">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton5"
                    android:src="@drawable/ggg"
                    android:background="@android:color/white" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:text="@string/Sök"
                    android:id="@+id/button3"
                    android:layout_gravity="center_horizontal|left"
                    android:background="#ffb55bc0" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Tid"
                    android:id="@+id/textView8"
                    android:gravity="center"

                    android:paddingLeft="60dp"
                    android:textColor="#ff000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/just"
                    android:id="@+id/textView7"
                    android:gravity="center"


                    android:layout_gravity="center_vertical"
                    android:textColor="#ff000000" />

            </LinearLayout>

        </TableRow>

        <Button
            android:layout_width="176dp"
            android:layout_height="58dp"
            android:text="@string/change"
            android:id="@+id/button"
            android:layout_column="1"
            android:background="@android:drawable/presence_invisible" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ankomst"
                    android:id="@+id/radioButton"
                    android:layout_gravity="left"
                    android:textColor="#ff120009" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Avgång"
                    android:id="@+id/radioButton2"
                    android:layout_gravity="right"
                    android:textColor="#ff000000" />

            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Trafikslag"

                    android:id="@+id/textView9"
                    android:paddingLeft="150dp"
                    android:textColor="#ff040102" />
            </LinearLayout>
        </TableRow>

        <Button
            android:layout_width="176dp"
            android:layout_height="58dp"
            android:text="@string/change2"
            android:id="@+id/button2"
            android:background="@android:drawable/presence_invisible" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Favoriter"
                    android:id="@+id/textView10"
                    android:layout_gravity="center"
                    android:paddingRight="82dp"
                    android:textColor="#ff000000" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="198dp"
                    android:layout_height="53dp"
                    android:background="@drawable/ttt"
                    android:entries="@array/qui"
                    />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Bevakningar"
                    android:id="@+id/textView11"
                    android:layout_gravity="center"
                    android:paddingRight="53dp"
                    android:textColor="#ff000000" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="198dp"
                    android:layout_height="53dp"
                    android:background="@drawable/potensblomma"
                    android:entries="@array/ui"
                    android:spinnerMode="dropdown"
                    />


            </LinearLayout>
        </TableRow>


    </TableLayout>

</FrameLayout>

